// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using PharmaLink.Data;

#nullable disable

namespace PharmaLink.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260818000000_InitialCreate")]
    partial class InitialCreate
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.0")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRole", b =>
            {
                b.Property<string>("Id").HasColumnType("nvarchar(450)");
                b.Property<string>("ConcurrencyStamp").IsConcurrencyToken().HasColumnType("nvarchar(max)");
                b.Property<string>("Name").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.Property<string>("NormalizedName").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.HasKey("Id");
                b.HasIndex("NormalizedName").IsUnique().HasDatabaseName("RoleNameIndex").HasFilter("[NormalizedName] IS NOT NULL");
                b.ToTable("AspNetRoles", (string)null);
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRoleClaim<string>", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("ClaimType").HasColumnType("nvarchar(max)");
                b.Property<string>("ClaimValue").HasColumnType("nvarchar(max)");
                b.Property<string>("RoleId").IsRequired().HasColumnType("nvarchar(450)");
                b.HasKey("Id");
                b.HasIndex("RoleId");
                b.ToTable("AspNetRoleClaims", (string)null);
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserClaim<string>", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("ClaimType").HasColumnType("nvarchar(max)");
                b.Property<string>("ClaimValue").HasColumnType("nvarchar(max)");
                b.Property<string>("UserId").IsRequired().HasColumnType("nvarchar(450)");
                b.HasKey("Id");
                b.HasIndex("UserId");
                b.ToTable("AspNetUserClaims", (string)null);
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserLogin<string>", b =>
            {
                b.Property<string>("LoginProvider").HasColumnType("nvarchar(450)");
                b.Property<string>("ProviderKey").HasColumnType("nvarchar(450)");
                b.Property<string>("ProviderDisplayName").HasColumnType("nvarchar(max)");
                b.Property<string>("UserId").IsRequired().HasColumnType("nvarchar(450)");
                b.HasKey("LoginProvider", "ProviderKey");
                b.HasIndex("UserId");
                b.ToTable("AspNetUserLogins", (string)null);
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserRole<string>", b =>
            {
                b.Property<string>("UserId").HasColumnType("nvarchar(450)");
                b.Property<string>("RoleId").HasColumnType("nvarchar(450)");
                b.HasKey("UserId", "RoleId");
                b.HasIndex("RoleId");
                b.ToTable("AspNetUserRoles", (string)null);
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserToken<string>", b =>
            {
                b.Property<string>("UserId").HasColumnType("nvarchar(450)");
                b.Property<string>("LoginProvider").HasColumnType("nvarchar(450)");
                b.Property<string>("Name").HasColumnType("nvarchar(450)");
                b.Property<string>("Value").HasColumnType("nvarchar(max)");
                b.HasKey("UserId", "LoginProvider", "Name");
                b.ToTable("AspNetUserTokens", (string)null);
            });

            modelBuilder.Entity("PharmaLink.Models.ApplicationUser", b =>
            {
                b.Property<string>("Id").HasColumnType("nvarchar(450)");
                b.Property<int>("AccessFailedCount").HasColumnType("int");
                b.Property<string>("Address").HasMaxLength(500).HasColumnType("nvarchar(500)");
                b.Property<string>("City").HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<string>("ConcurrencyStamp").IsConcurrencyToken().HasColumnType("nvarchar(max)");
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("Email").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.Property<bool>("EmailConfirmed").HasColumnType("bit");
                b.Property<string>("FirstName").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<bool>("IsActive").HasColumnType("bit");
                b.Property<string>("LastName").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<bool>("LockoutEnabled").HasColumnType("bit");
                b.Property<DateTimeOffset?>("LockoutEnd").HasColumnType("datetimeoffset");
                b.Property<string>("NormalizedEmail").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.Property<string>("NormalizedUserName").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.Property<string>("PasswordHash").HasColumnType("nvarchar(max)");
                b.Property<int?>("PharmacyId").HasColumnType("int");
                b.Property<string>("PhoneNumber").HasColumnType("nvarchar(max)");
                b.Property<bool>("PhoneNumberConfirmed").HasColumnType("bit");
                b.Property<string>("SecurityStamp").HasColumnType("nvarchar(max)");
                b.Property<bool>("TwoFactorEnabled").HasColumnType("bit");
                b.Property<string>("UserName").HasMaxLength(256).HasColumnType("nvarchar(256)");
                b.HasKey("Id");
                b.HasIndex("NormalizedEmail").HasDatabaseName("EmailIndex");
                b.HasIndex("NormalizedUserName").IsUnique().HasDatabaseName("UserNameIndex").HasFilter("[NormalizedUserName] IS NOT NULL");
                b.ToTable("AspNetUsers", (string)null);
            });

            modelBuilder.Entity("PharmaLink.Models.Inventory", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<DateTime>("LastUpdated").HasColumnType("datetime2");
                b.Property<int>("MedicineId").HasColumnType("int");
                b.Property<int>("MinimumStockLevel").HasColumnType("int");
                b.Property<int>("PharmacyId").HasColumnType("int");
                b.Property<int>("Quantity").HasColumnType("int");
                b.HasKey("Id");
                b.HasIndex("MedicineId");
                b.HasIndex("PharmacyId", "MedicineId").IsUnique();
                b.ToTable("Inventories");
            });

            modelBuilder.Entity("PharmaLink.Models.Medicine", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("Category").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("Description").HasMaxLength(2000).HasColumnType("nvarchar(2000)");
                b.Property<DateTime?>("ExpiryDate").HasColumnType("datetime2");
                b.Property<string>("ImageUrl").HasMaxLength(255).HasColumnType("nvarchar(255)");
                b.Property<bool>("IsActive").HasColumnType("bit");
                b.Property<string>("Name").IsRequired().HasMaxLength(300).HasColumnType("nvarchar(300)");
                b.Property<decimal>("Price").HasColumnType("decimal(18,2)");
                b.Property<int>("Quantity").HasColumnType("int");
                b.Property<bool>("RequiresPrescription").HasColumnType("bit");
                b.HasKey("Id");
                b.HasIndex("Category");
                b.HasIndex("Name");
                b.ToTable("Medicines");
            });

            modelBuilder.Entity("PharmaLink.Models.Pharmacy", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("Address").IsRequired().HasMaxLength(500).HasColumnType("nvarchar(500)");
                b.Property<string>("City").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("Description").HasMaxLength(1000).HasColumnType("nvarchar(1000)");
                b.Property<string>("Email").HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<string>("ImageUrl").HasMaxLength(255).HasColumnType("nvarchar(255)");
                b.Property<bool>("IsActive").HasColumnType("bit");
                b.Property<bool>("IsOpen").HasColumnType("bit");
                b.Property<string>("Name").IsRequired().HasMaxLength(200).HasColumnType("nvarchar(200)");
                b.Property<string>("OwnerId").HasColumnType("nvarchar(450)");
                b.Property<string>("Phone").HasMaxLength(20).HasColumnType("nvarchar(20)");
                b.HasKey("Id");
                b.HasIndex("City");
                b.HasIndex("OwnerId").IsUnique().HasFilter("[OwnerId] IS NOT NULL");
                b.ToTable("Pharmacies");
            });

            modelBuilder.Entity("PharmaLink.Models.Prescription", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("DoctorName").HasMaxLength(200).HasColumnType("nvarchar(200)");
                b.Property<string>("Notes").HasMaxLength(1000).HasColumnType("nvarchar(1000)");
                b.Property<DateTime>("PrescriptionDate").HasColumnType("datetime2");
                b.Property<int>("Status").HasColumnType("int");
                b.Property<string>("UserId").IsRequired().HasColumnType("nvarchar(450)");
                b.HasKey("Id");
                b.HasIndex("UserId");
                b.ToTable("Prescriptions");
            });

            modelBuilder.Entity("PharmaLink.Models.PrescriptionItem", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("DosageInstructions").HasMaxLength(500).HasColumnType("nvarchar(500)");
                b.Property<int>("MedicineId").HasColumnType("int");
                b.Property<int>("PrescriptionId").HasColumnType("int");
                b.Property<int>("Quantity").HasColumnType("int");
                b.HasKey("Id");
                b.HasIndex("MedicineId");
                b.HasIndex("PrescriptionId");
                b.ToTable("PrescriptionItems");
            });

            modelBuilder.Entity("PharmaLink.Models.Sale", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("Notes").HasMaxLength(500).HasColumnType("nvarchar(500)");
                b.Property<int>("PharmacyId").HasColumnType("int");
                b.Property<DateTime>("SaleDate").HasColumnType("datetime2");
                b.Property<int>("Status").HasColumnType("int");
                b.Property<decimal>("TotalAmount").HasColumnType("decimal(18,2)");
                b.Property<string>("UserId").IsRequired().HasColumnType("nvarchar(450)");
                b.HasKey("Id");
                b.HasIndex("PharmacyId");
                b.HasIndex("UserId");
                b.ToTable("Sales");
            });

            modelBuilder.Entity("PharmaLink.Models.SaleItem", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<int>("MedicineId").HasColumnType("int");
                b.Property<int>("Quantity").HasColumnType("int");
                b.Property<int>("SaleId").HasColumnType("int");
                b.Property<decimal>("UnitPrice").HasColumnType("decimal(18,2)");
                b.HasKey("Id");
                b.HasIndex("MedicineId");
                b.HasIndex("SaleId");
                b.ToTable("SaleItems");
            });

            modelBuilder.Entity("PharmaLink.Models.Supplier", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<string>("Address").HasMaxLength(500).HasColumnType("nvarchar(500)");
                b.Property<string>("ContactPerson").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<DateTime>("CreatedAt").HasColumnType("datetime2");
                b.Property<string>("Email").IsRequired().HasMaxLength(100).HasColumnType("nvarchar(100)");
                b.Property<bool>("IsActive").HasColumnType("bit");
                b.Property<string>("Name").IsRequired().HasMaxLength(200).HasColumnType("nvarchar(200)");
                b.Property<string>("Phone").IsRequired().HasMaxLength(20).HasColumnType("nvarchar(20)");
                b.HasKey("Id");
                b.HasIndex("Name");
                b.ToTable("Suppliers");
            });

            modelBuilder.Entity("PharmaLink.Models.SupplierMedicine", b =>
            {
                b.Property<int>("Id").ValueGeneratedOnAdd().HasColumnType("int");
                SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));
                b.Property<int>("AvailableQuantity").HasColumnType("int");
                b.Property<DateTime?>("LastSupplyDate").HasColumnType("datetime2");
                b.Property<int>("MedicineId").HasColumnType("int");
                b.Property<int>("SupplierId").HasColumnType("int");
                b.Property<decimal>("SupplyPrice").HasColumnType("decimal(18,2)");
                b.HasKey("Id");
                b.HasIndex("MedicineId");
                b.HasIndex("SupplierId", "MedicineId").IsUnique();
                b.ToTable("SupplierMedicines");
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityRoleClaim<string>", b =>
            {
                b.HasOne("Microsoft.AspNetCore.Identity.IdentityRole", null)
                    .WithMany().HasForeignKey("RoleId").OnDelete(DeleteBehavior.Cascade).IsRequired();
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserClaim<string>", b =>
            {
                b.HasOne("PharmaLink.Models.ApplicationUser", null)
                    .WithMany().HasForeignKey("UserId").OnDelete(DeleteBehavior.Cascade).IsRequired();
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserLogin<string>", b =>
            {
                b.HasOne("PharmaLink.Models.ApplicationUser", null)
                    .WithMany().HasForeignKey("UserId").OnDelete(DeleteBehavior.Cascade).IsRequired();
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserRole<string>", b =>
            {
                b.HasOne("Microsoft.AspNetCore.Identity.IdentityRole", null)
                    .WithMany().HasForeignKey("RoleId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.HasOne("PharmaLink.Models.ApplicationUser", null)
                    .WithMany().HasForeignKey("UserId").OnDelete(DeleteBehavior.Cascade).IsRequired();
            });

            modelBuilder.Entity("Microsoft.AspNetCore.Identity.IdentityUserToken<string>", b =>
            {
                b.HasOne("PharmaLink.Models.ApplicationUser", null)
                    .WithMany().HasForeignKey("UserId").OnDelete(DeleteBehavior.Cascade).IsRequired();
            });

            modelBuilder.Entity("PharmaLink.Models.Inventory", b =>
            {
                b.HasOne("PharmaLink.Models.Medicine", "Medicine")
                    .WithMany("Inventories").HasForeignKey("MedicineId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.HasOne("PharmaLink.Models.Pharmacy", "Pharmacy")
                    .WithMany("Inventories").HasForeignKey("PharmacyId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.Navigation("Medicine");
                b.Navigation("Pharmacy");
            });

            modelBuilder.Entity("PharmaLink.Models.Pharmacy", b =>
            {
                b.HasOne("PharmaLink.Models.ApplicationUser", "Owner")
                    .WithOne("OwnedPharmacy").HasForeignKey("PharmaLink.Models.Pharmacy", "OwnerId").OnDelete(DeleteBehavior.SetNull);
                b.Navigation("Owner");
            });

            modelBuilder.Entity("PharmaLink.Models.Prescription", b =>
            {
                b.HasOne("PharmaLink.Models.ApplicationUser", "User")
                    .WithMany("Prescriptions").HasForeignKey("UserId").OnDelete(DeleteBehavior.Restrict).IsRequired();
                b.Navigation("User");
            });

            modelBuilder.Entity("PharmaLink.Models.PrescriptionItem", b =>
            {
                b.HasOne("PharmaLink.Models.Medicine", "Medicine")
                    .WithMany("PrescriptionItems").HasForeignKey("MedicineId").OnDelete(DeleteBehavior.Restrict).IsRequired();
                b.HasOne("PharmaLink.Models.Prescription", "Prescription")
                    .WithMany("PrescriptionItems").HasForeignKey("PrescriptionId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.Navigation("Medicine");
                b.Navigation("Prescription");
            });

            modelBuilder.Entity("PharmaLink.Models.Sale", b =>
            {
                b.HasOne("PharmaLink.Models.Pharmacy", "Pharmacy")
                    .WithMany("Sales").HasForeignKey("PharmacyId").OnDelete(DeleteBehavior.Restrict).IsRequired();
                b.HasOne("PharmaLink.Models.ApplicationUser", "User")
                    .WithMany("Sales").HasForeignKey("UserId").OnDelete(DeleteBehavior.Restrict).IsRequired();
                b.Navigation("Pharmacy");
                b.Navigation("User");
            });

            modelBuilder.Entity("PharmaLink.Models.SaleItem", b =>
            {
                b.HasOne("PharmaLink.Models.Medicine", "Medicine")
                    .WithMany("SaleItems").HasForeignKey("MedicineId").OnDelete(DeleteBehavior.Restrict).IsRequired();
                b.HasOne("PharmaLink.Models.Sale", "Sale")
                    .WithMany("SaleItems").HasForeignKey("SaleId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.Navigation("Medicine");
                b.Navigation("Sale");
            });

            modelBuilder.Entity("PharmaLink.Models.SupplierMedicine", b =>
            {
                b.HasOne("PharmaLink.Models.Medicine", "Medicine")
                    .WithMany("SupplierMedicines").HasForeignKey("MedicineId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.HasOne("PharmaLink.Models.Supplier", "Supplier")
                    .WithMany("SupplierMedicines").HasForeignKey("SupplierId").OnDelete(DeleteBehavior.Cascade).IsRequired();
                b.Navigation("Medicine");
                b.Navigation("Supplier");
            });

            modelBuilder.Entity("PharmaLink.Models.ApplicationUser", b =>
            {
                b.Navigation("OwnedPharmacy");
                b.Navigation("Prescriptions");
                b.Navigation("Sales");
            });

            modelBuilder.Entity("PharmaLink.Models.Medicine", b =>
            {
                b.Navigation("Inventories");
                b.Navigation("PrescriptionItems");
                b.Navigation("SaleItems");
                b.Navigation("SupplierMedicines");
            });

            modelBuilder.Entity("PharmaLink.Models.Pharmacy", b =>
            {
                b.Navigation("Inventories");
                b.Navigation("Sales");
            });

            modelBuilder.Entity("PharmaLink.Models.Prescription", b =>
            {
                b.Navigation("PrescriptionItems");
            });

            modelBuilder.Entity("PharmaLink.Models.Sale", b =>
            {
                b.Navigation("SaleItems");
            });

            modelBuilder.Entity("PharmaLink.Models.Supplier", b =>
            {
                b.Navigation("SupplierMedicines");
            });
#pragma warning restore 612, 618
        }
    }
}